--- a/index.html
+++ b/index.html
@@ -8,37 +8,48 @@
 </head>
 <body>
   <header>
-    <h1>Flodder Wiki</h1>
+    <h1>🧨 Flodder Wiki</h1>
     <nav>
-      <a href="#familie">Familie Flodder</a>
-      <a href="#series">Series</a>
+      <a href="#familie">Familie</a>
       <a href="#films">Films</a>
+      <a href="#series">Series</a>
     </nav>
   </header>
 
   <main>
     <section id="familie">
-      <h2>De Familie Flodder</h2>
-      <p>De familie Flodder is een asociale familie uit de gelijknamige Nederlandse film en serie...</p>
-    </section>
-
-    <section id="series">
-      <h2>De Series</h2>
-      <p>Er zijn meerdere seizoenen gemaakt van de populaire tv-serie...</p>
+      <h2>👨‍👩‍👧‍👦 De Familie Flodder</h2>
+      <p>
+        De familie Flodder is een asociale familie uit een volkswijk die in een chique buurt terechtkomt. 
+        Ze zorgen voor chaos, humor, en onvergetelijke momenten. De hoofdfiguren zijn:
+      </p>
+      <ul>
+        <li><strong>Ma Flodder</strong> – De bazige moeder des huizes</li>
+        <li><strong>Johnny</strong> – De gladde zoon, vrouwenverslinder</li>
+        <li><strong>Kees</strong> – De gespierde, simpele broer</li>
+        <li><strong>Kees (dochter)</strong> – Sexy, eigenwijs en slim</li>
+        <li><strong>Henkie & Little Kees</strong> – De kleine broertjes</li>
+        <li><strong>Opa Flodder</strong> – De stokoude opa met bizarre trekjes</li>
+      </ul>
     </section>
 
     <section id="films">
-      <h2>De Films</h2>
-      <ul>
-        <li>Flodder (1986)</li>
-        <li>Flodder in Amerika! (1992)</li>
-        <li>Flodder 3 (1995)</li>
-      </ul>
+      <h2>🎬 Films</h2>
+      <ol>
+        <li><strong>Flodder</strong> (1986) – De eerste film, regie: Dick Maas</li>
+        <li><strong>Flodder in Amerika!</strong> (1992) – De familie gaat naar de VS</li>
+        <li><strong>Flodder 3</strong> (1995) – Chaos in Zonnedael keert terug</li>
+      </ol>
+    </section>
+
+    <section id="series">
+      <h2>📺 Series</h2>
+      <p>De Flodder-serie liep van 1993 tot 1998 en bestaat uit vijf seizoenen met hilarische afleveringen over de dagelijkse chaos in Zonnedael.</p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Flodder Wiki – Gemaakt door een fan :)</p>
+    <p>&copy; 2025 Flodder Wiki – Gemaakt door fans voor fans</p>
   </footer>
 </body>
 </html>
